[package]
name = "steady_vec"
version = "0.0.0"
edition = "2021"
authors = ["ickk <crates@ickk.io>"]
license = "MIT OR Apache-2.0 OR Zlib"
readme = "./README.md"
include = ["src/", "LICENSE-APACHE", "LICENSE-MIT", "LICENSE-ZLIB"]
repository = "https://github.com/ickk/steady_vec/"
publish = false

[dependencies]

[lints]
rust.unsafe_op_in_unsafe_fn = "deny"
clippy.new_without_default = "allow"
clippy.toplevel_ref_arg = "allow"
clippy.too_many_arguments = "allow"
clippy.match_ref_pats = "allow"
clippy.needless_return = "allow"
